--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <!-- Notification -->
     <string name="noti_title">알림</string>
     <string name="item_schedule_notification_setting_title">상품 알림 설정</string>
+    <string name="default_notification_channel_id">fcm_default_channel</string>
 
     <string name="select_notification_type">알림 유형 선택</string>
     <string name="restock">재입고</string>
