[mod] 프로필에서 닉네임 없는 경우 ui 처리 및 이메일 보여주기

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
 
     <!-- My -->
     <string name="my_title">마이페이지</string>
+    <string name="my_nickname_format_for_users_without_nickname">#%s</string>
     <string name="my_faq_btn_text">FAQ</string>
     <string name="my_version_info_btn_text">버전정보</string>
     <string name="my_terms_btn_text">이용약관</string>
