[mod] 폴더 추가 다이얼로그 UI 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="save">저장</string>
     <string name="complete">완료</string>
     <string name="next">다음</string>
+    <string name="add">추가</string>
     <string name="colon">:</string>
 
     <!-- Sign -->
