--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="folder_more_dialog_title">옵션 더보기</string>
     <string name="folder_delete">폴더 삭제</string>
     <string name="folder_name_edit">폴더명 수정</string>
+    <string name="folder_item_count_format">%d 아이템</string>
 
     <!-- Item Registration -->
     <string name="item_registration_title">새 아이템</string>
