--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,11 +53,11 @@
     <string name="price">가격</string>
     <string name="price_input_text">가격을 입력해주세요.</string>
     <string name="shop_link">쇼핑몰 링크</string>
-    <string name="shop_link_input_text">쇼핑몰 링크를 입력해주세요.</string>
+    <string name="shop_link_input_text">쇼핑몰 링크를 입력해 보세요!</string>
     <string name="item_schedule_notification">상품 일정 알림</string>
     <string name="item_notification_info">[%s 알림] %s</string>
     <string name="memo">메모</string>
-    <string name="memo_input_text">메모를 작성해 보세요.</string>
+    <string name="memo_input_text">브랜드, 사이즈, 컬러 등 아이템 정보를 메모로 남겨보세요😉</string>
     <string name="wish_item_registration_toast_text">위시리스트에 추가되었습니다</string>
     <string name="wish_item_registration_gallery_image_title">사진 선택하기</string>
     <string name="wish_item_update_toast_text">상품 수정이 완료되었습니다.</string>
@@ -100,5 +100,7 @@
     <string name="navigation_menu_title_add">ADD</string>
     <string name="navigation_menu_title_notice">NOTICE</string>
     <string name="navigation_menu_title_my">MY</string>
+    <string name="wish_basic_item_add_title">아이템 추가</string>
+    <string name="wish_basic_item_edit_title">아이템 수정</string>
 
 </resources>
