--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,7 +70,10 @@
     <string name="wish_item_registration_gallery_image_title">사진 선택하기</string>
     <string name="wish_item_update_toast_text">상품 수정이 완료되었습니다.</string>
     <string name="wish_item_upload_toast_text">상품 등록이 완료되었습니다.</string>
-
+    <string name="wish_list_registration">위시리스트에 추가</string>
+    <string name="wish_list_registration_memo_hint">메모를 입력해보세요.</string>
+    <string name="wish_registration_price_hint">가격을 입력해주세요.</string>
+    
     <!-- Detail -->
     <string name="go_to_shop_btn_text">쇼핑몰로 이동하기</string>
     <string name="wish_item_deletion_toast_text">위시리스트에서 삭제되었습니다</string>
@@ -95,15 +98,22 @@
 
     <!-- My -->
     <string name="my_title">마이페이지</string>
-    <string name="my_nickname_format_for_users_without_nickname">#%s</string>
-    <string name="my_faq_btn_text">FAQ</string>
-    <string name="my_version_info_btn_text">버전정보</string>
-    <string name="my_terms_btn_text">이용약관</string>
-    <string name="my_logout_btn_text">로그아웃</string>
-    <string name="my_exit_btn_text">탈퇴하기</string>
-    <string name="wish_list_registration">위시리스트에 추가</string>
-    <string name="wish_list_registration_memo_hint">메모를 입력해보세요.</string>
-    <string name="wish_registration_price_hint">가격을 입력해주세요.</string>
+    <string name="my_nickname_format_for_users_without_nickname">wish%s</string>
+    <string name="my_section_title_settings">설정</string>
+    <string name="my_section_sub_title_edit_password">비밀번호 변경</string>
+
+    <string name="my_section_title_customer_support">고객 지원</string>
+    <string name="my_section_sub_title_contact_us">문의하기</string>
+
+    <string name="my_section_title_service_info">서비스 정보</string>
+    <string name="my_section_sub_title_how_to_use">위시보드 이용방법</string>
+    <string name="my_section_sub_title_terms">이용약관</string>
+    <string name="my_section_sub_title_version_info">버전정보</string>
+    <string name="service_version">1.0.0</string>
+
+    <string name="my_section_title_account_management">계정 관리</string>
+    <string name="my_section_sub_title_logout">로그아웃</string>
+    <string name="my_section_sub_title_exit">탈퇴하기</string>
 
     <!-- Navigation Menu -->
     <string name="navigation_menu_title_wishlist">WISHLIST</string>
