--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,7 +73,7 @@
     <string name="wish_list_registration">위시리스트에 추가</string>
     <string name="wish_list_registration_memo_hint">메모를 입력해보세요.</string>
     <string name="wish_registration_price_hint">가격을 입력해주세요.</string>
-    
+
     <!-- Detail -->
     <string name="go_to_shop_btn_text">쇼핑몰로 이동하기</string>
     <string name="wish_item_deletion_toast_text">위시리스트에서 삭제되었습니다</string>
@@ -114,6 +114,9 @@
     <string name="my_section_title_account_management">계정 관리</string>
     <string name="my_section_sub_title_logout">로그아웃</string>
     <string name="my_section_sub_title_exit">탈퇴하기</string>
+
+    <string name="my_profile_edit_title">프로필 수정</string>
+    <string name="my_profile_edit_nickname_hint">닉네임을 입력해 주세요.</string>
 
     <!-- Navigation Menu -->
     <string name="navigation_menu_title_wishlist">WISHLIST</string>
