--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,7 +100,6 @@
 
     <!-- My -->
     <string name="my_title">마이페이지</string>
-    <string name="my_nickname_format_for_users_without_nickname">wish%s</string>
     <string name="my_section_title_settings">설정</string>
     <string name="my_section_sub_title_edit_password">비밀번호 변경</string>
 
@@ -119,6 +118,7 @@
 
     <string name="my_profile_edit_title">프로필 수정</string>
     <string name="my_profile_edit_nickname_hint">닉네임을 입력해 주세요.</string>
+    <string name="my_nickname_already_exist_toast_text">이미 사용 중인 닉네임이에요!</string>
 
     <!-- Navigation Menu -->
     <string name="navigation_menu_title_wishlist">WISHLIST</string>
