--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="all">전체</string>
     <string name="count">개</string>
     <string name="delete">삭제</string>
+    <string name="close">닫기</string>
 
     <!-- Format -->
     <string name="time_a_moment_ago">방금 전</string>
@@ -53,8 +54,9 @@
     <string name="folder_add_dialog_folder_name_edit_title">폴더명 수정</string>
     <string name="folder_add_dialog_detail">새 폴더명을 입력하세요.</string>
     <string name="folder_add_dialog_folder_name_length_format">(%d/10)</string>
-    <string name="folder_delete_dialog_title">정말 삭제하시겠습니까?</string>
-    <string name="folder_delete_dialog_detail">폴더가 삭제되어도 아이템은 사라지지 않아요!</string>
+    <string name="folder_delete_dialog_title">폴더 삭제</string>
+    <!-- TODO rename -->
+    <string name="folder_delete_dialog_detail">정말 폴더를 삭제하시겠어요?\n폴더가 삭제되어도 아이템은 사라지지 않아요</string>
     <string name="folder_add_toast_text">폴더를 추가했습니다</string>
     <string name="folder_name_update_toast_text">폴더명을 수정했습니다</string>
     <string name="folder_name_already_exist_toast_text">같은 이름의 폴더가 있어요!</string>
