--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,9 +32,11 @@
     <string name="login_btn_text">로그인</string>
     <string name="login_underline_text"><u>로그인</u></string>
     <string name="welcome_text">흩어져있는 위시리스트를\n위시보드로 간편하게 통합 관리해 보세요!️</string>
-    <string name="email_input_text">이메일을 입력해 주세요.</string>
-    <string name="password_input_text">비밀번호를 입력해 주세요.</string>
-    <string name="password_conditions_text">8자리 이상의 영문자, 숫자, 특수 문자 조합</string>
+    <string name="email_input_text">이메일</string>
+    <string name="password_input_text">비밀번호</string>
+    <string name="sign_email_detail_text">메일 주소를 정확하게 입력해 주세요.</string>
+    <string name="sign_password_detail_text">8자리 이상의 영문자, 숫자, 특수 문자 조합으로 입력해주세요.</string>
+    <string name="sign_verification_code_toast_text">인증코드를 다시 확인해 주세요.</string>
     <string name="sign_up_email_guide_text">이메일 인증으로 비밀번호를 찾을 수 있어요.\n실제 사용될 이메일로 입력해주세요!</string>
     <string name="sign_up_password_guide_text">마지막 비밀번호 입력 단계예요!\n입력된 비밀번호로 바로 가입되니 신중히 입력해 주세요.</string>
     <string name="sign_already_have_an_account_guide_text">이미 계정이 있으신가요?</string>
@@ -134,7 +136,7 @@
     <string name="my_membership_exit_dialog_description">정말 탈퇴 하시겠어요?</string>
 
     <string name="my_profile_edit_title">프로필 수정</string>
-    <string name="my_profile_edit_nickname_hint">닉네임을 입력해 주세요.</string>
+    <string name="my_profile_edit_nickname_hint">닉네임</string>
     <string name="my_nickname_already_exist_toast_text">이미 사용 중인 닉네임이에요!</string>
 
     <!-- Navigation Menu -->
