--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,15 +34,21 @@
     <string name="welcome_text">흩어져있는 위시리스트를\n위시보드로 간편하게 통합 관리해 보세요!️</string>
     <string name="email_input_text">이메일</string>
     <string name="password_input_text">비밀번호</string>
-    <string name="sign_email_detail_text">메일 주소를 정확하게 입력해 주세요.</string>
+    <string name="verification_code_input_text">인증 코드</string>
+    <string name="sign_email_format_detail_text">메일 주소를 정확하게 입력해 주세요.</string>
+    <string name="sign_email_unregistered_user_detail_text">앗, 가입되지 않은 계정이에요! 가입하기부터 진행해 주세요.</string>
     <string name="sign_password_detail_text">8자리 이상의 영문자, 숫자, 특수 문자 조합으로 입력해주세요.</string>
     <string name="sign_verification_code_toast_text">인증코드를 다시 확인해 주세요.</string>
     <string name="sign_up_email_guide_text">이메일 인증으로 비밀번호를 찾을 수 있어요.\n실제 사용될 이메일로 입력해주세요!</string>
     <string name="sign_up_password_guide_text">마지막 비밀번호 입력 단계예요!\n입력된 비밀번호로 바로 가입되니 신중히 입력해 주세요.</string>
     <string name="sign_already_have_an_account_guide_text">이미 계정이 있으신가요?</string>
-    <string name="sign_in_title">로그인 하기</string>
+    <string name="sign_in_title">로그인하기</string>
     <string name="sign_in_forgot_your_password"><u>비밀번호를 잊으셨나요?</u></string>
     <string name="login_failed_snackbar_test">잘못된 아이디 또는 패스워드 입니다</string>
+    <string name="sign_in_email_title">이메일로 로그인하기</string>
+    <string name="sign_in_email_guide_text">가입하신 이메일을 입력해주세요!\n로그인을 위해 인증코드가 포함된 이메일을 보내드려요!</string>
+    <string name="sign_in_verification_email_send_button_text">인증메일 받기</string>
+    <string name="sign_in_verification_email_resend_button_text">인증메일 재요청</string>
 
     <!-- Cart -->
     <string name="cart_title">장바구니</string>
