--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="verification_code_input_text">인증 코드</string>
     <string name="sign_email_format_detail_text">메일 주소를 정확하게 입력해 주세요.</string>
     <string name="sign_email_unregistered_user_detail_text">앗, 가입되지 않은 계정이에요! 가입하기부터 진행해 주세요.</string>
+    <string name="sign_up_email_registered_user_detail_text">앗, 이미 가입된 계정이에요! 로그인으로 진행해 주세요.</string>
     <string name="sign_password_detail_text">8자리 이상의 영문자, 숫자, 특수 문자 조합으로 입력해주세요.</string>
     <string name="sign_verification_code_toast_text">인증코드를 다시 확인해 주세요.</string>
     <string name="sign_up_email_guide_text">이메일 인증으로 비밀번호를 찾을 수 있어요.\n실제 사용될 이메일로 입력해주세요!</string>
