--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="sign_in_email_guide_text">가입하신 이메일을 입력해주세요!\n로그인을 위해 인증코드가 포함된 이메일을 보내드려요!</string>
     <string name="sign_in_verification_email_send_button_text">인증메일 받기</string>
     <string name="sign_in_verification_email_resend_button_text">재요청</string>
-    <string name="sign_up_complete">가입완료</string>
+    <string name="sign_up_complete">가입하기</string>
 
     <!-- Cart -->
     <string name="cart_title">장바구니</string>
