--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="complete">완료</string>
     <string name="next">다음</string>
     <string name="add">추가</string>
-    <string name="edit">변경</string>
+    <string name="edit">수정</string>
     <string name="colon">:</string>
     <string name="all">전체</string>
     <string name="count">개</string>
@@ -62,7 +62,7 @@
     <string name="folder_list_title">폴더 목록</string>
     <string name="folder_add_dialog_title">새 폴더 추가</string>
     <string name="folder_add_dialog_folder_name_edit_title">폴더명 수정</string>
-    <string name="folder_add_dialog_detail">새 폴더명을 입력하세요.</string>
+    <string name="folder_add_dialog_detail">폴더명</string>
     <string name="folder_add_dialog_folder_name_length_format">(%d/10)</string>
     <string name="folder_delete_dialog_title">폴더 삭제</string>
     <!-- TODO rename -->
