[mod] string 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Wishboard</string>
+    <string name="app_name">WishBoard</string>
     <string name="logo_text">Wish Board</string>
 
     <!-- Global -->
