--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,5 +172,6 @@
     <string name="navigation_menu_title_add">ADD</string>
     <string name="navigation_menu_title_notice">NOTICE</string>
     <string name="navigation_menu_title_my">MY</string>
+    <string name="add_folder">폴더 추가</string>
 
 </resources>
