--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="time_minutes_ago">분 전</string>
     <string name="time_hours_ago">시간 전</string>
     <string name="time_days_ago">일 전</string>
+    <string name="time_weeks_ago">주 전</string>
     <string name="time_months_ago">달 전</string>
     <string name="time_years_ago">년 전</string>
 
