--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,7 +81,7 @@
     <string name="folder">폴더</string>
     <string name="folder_name">폴더명</string>
     <string name="folder_name_edit">폴더명 수정</string>
-    <string name="folder_list_title">폴더 목록</string>
+    <string name="folder_list_title">폴더 지정</string>
     <string name="folder_item_count_format">%d 아이템</string>
     <string name="folder_no_item_view">앗, 폴더가 없어요!\n폴더를 추가해서 아이템을 정리해 보세요!</string>
     <string name="folder_detail_no_item_view">앗, 아이템이 없어요!\n폴더에 아이템을 담아보세요!</string>
