[chore] 회원탈퇴 워딩 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,7 +161,7 @@
     <string name="my_logout_dialog_description">정말 로그아웃 하시겠어요?</string>
     <string name="my_section_sub_title_exit">탈퇴하기</string>
     <string name="my_membership_exit_dialog_title">탈퇴</string>
-    <string name="my_membership_exit_dialog_description">정말 탈퇴 하시겠어요?</string> <!-- TODO 워딩 수정 필요 -->
+    <string name="my_membership_exit_dialog_description">정말 탈퇴하시겠어요? 탈퇴 시 회원정보는 7일 후 파기되고, 파기된 데이터는 복구 불가능합니다.</string>
 
     <string name="my_profile_edit_title">프로필 수정</string>
     <string name="my_profile_edit_nickname_hint">닉네임</string>
