--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,7 @@
     <string name="sign_in_email_resend_email_button_text">재요청</string>
     <string name="sign_in_email_guide">가입하신 이메일을 입력해주세요!\n로그인을 위해 인증코드가 포함된 이메일을 보내드려요!</string>
     <string name="sign_in_email_verification_code_detail">인증코드를 다시 확인해 주세요.</string>
-    <string name="sign_term">가입 시 <a href="https://www.notion.so/1-0-0-6738bc44f9624f5781fb026a6f165317"><font color="#73F87C">이용약관</font></a>과 <a href="https://www.notion.so/1-0-0-7d381fdc9515431fa43fc69d820aba0a"><font color="#73F87C">개인정보취급방침</font></a>에 동의하는 것으로 간주됩니다.</string>
+    <string name="sign_term">가입 시 이용약관과 개인정보취급방침에 동의하는 것으로 간주됩니다.</string>
 
     <!-- Home -->
     <string name="home_no_item_view">앗, 아이템이 없어요!\n갖고 싶은 아이템을 등록해보세요!</string>
