--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,6 +190,11 @@
     <string name="my_nickname_condition_detail">닉네임은 한글, 영문, 숫자만 가능해요.</string>
     <string name="my_nickname_already_exist_detail">이미 사용 중인 닉네임이에요!</string>
 
+    <string name="my_new_password">새 비밀번호</string>
+    <string name="my_new_password_hint">새 비밀번호를 입력해 주세요.</string>
+    <string name="my_new_password_re_write">새 비밀번호 재입력</string>
+    <string name="my_new_password_re_write_hint">새 비밀번호를 다시 입력해 주세요.</string>
+
     <!-- How To Use -->
     <string name="how_to_use_yes_button_text">네! 알겠어요</string>
     <string name="how_to_use_link_sharing_title">아이템 저장</string>
