--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -195,6 +195,7 @@
     <string name="my_new_password_hint">새 비밀번호를 입력해 주세요.</string>
     <string name="my_new_password_re_write">새 비밀번호 재입력</string>
     <string name="my_new_password_re_write_hint">새 비밀번호를 다시 입력해 주세요.</string>
+    <string name="my_password_mismatch_detail">비밀번호가 일치하지 않아요!</string>
 
     <!-- How To Use -->
     <string name="how_to_use_yes_button_text">네! 알겠어요</string>
