--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,8 @@
     <string name="cart">Cart</string>
     <string name="cart_title">장바구니</string>
     <string name="cart_no_item_view">앗, 장바구니가 비어있어요!\n구매할 아이템을 장바구니에 담아보세요!</string>
+    <string name="cart_delete_dialog_title">장바구니에서 삭제</string>
+    <string name="cart_delete_dialog_description">정말 장바구니에서 아이템을 삭제하시겠어요?</string>
 
     <!-- Folder -->
     <string name="folder">폴더</string>
