[feat] 변경된 로그인 뷰 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,8 @@
     <!-- Sign -->
     <string name="email">이메일</string>
     <string name="password">비밀번호</string>
+    <string name="sign_email_hint">이메일을 입력해 주세요.</string>
+    <string name="sign_password_hint">비밀번호를 입력해 주세요.</string>
     <string name="sign_email_format_detail">이메일 주소를 정확하게 입력해 주세요.</string>
     <string name="sign_password_detail">8자리 이상의 영문자, 숫자, 특수 문자 조합으로 입력해주세요.</string>
 
