--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,7 +93,7 @@
     <string name="folder">폴더</string>
     <string name="folder_name">폴더명</string>
     <string name="folder_name_edit">폴더명 수정</string>
-    <string name="folder_list_title">폴더 지정</string>
+    <string name="folder_list_title">폴더 선택</string>
     <string name="folder_item_count_format">%d 아이템</string>
     <string name="folder_no_item_view">앗, 폴더가 없어요!\n폴더를 추가해서 아이템을 정리해 보세요!</string>
     <string name="folder_detail_no_item_view">앗, 아이템이 없어요!\n폴더에 아이템을 담아보세요!</string>
@@ -137,8 +137,12 @@
     <string name="item_non_update_dialog_title">아이템 수정 오류</string>
     <string name="wish_list_registration_button_text_for_unregister_user">로그인 후 위시보드에 아이템을 담아보세요!</string>
 
+    <string name="shop_link_dialog_title">쇼핑몰 링크로 아이템 불러오기</string>
+    <string name="shop_link_dialog_hint">쇼핑몰 링크를 입력해 주세요.</string>
+    <string name="new_folder_dialog_hint">폴더명을 입력해 주세요.</string>
+
     <!-- Detail -->
-    <string name="go_to_folder">%s></string>
+    <string name="go_to_folder">%s ></string>
     <string name="setting_folder">폴더를 지정해 보세요!</string>
     <string name="go_to_shop_button_text">쇼핑몰로 이동하기</string>
     <string name="item_detail_item_delete_dialog_title">아이템 삭제</string>
@@ -204,7 +208,8 @@
 
     <!-- How To Use -->
     <string name="how_to_use_yes_button_text">네! 알겠어요</string>
-    <string name="how_to_use_link_sharing_title">아이템 저장</string>
+    <string name="how_to_use_link_sharing_title">이템 저장</string>
+    <string name="how_to_use_folder_setting">폴더 지정</string>
     <string name="how_to_use_link_sharing_description">웹 브라우저에서 사고 싶은 아이템을 발견했다면\n <b>공유하기</b>로 아이템을 위시보드에 저장해 보세요!</string>
     <string name="how_to_use_folder_setting_description">아이템에 폴더를 지정해보세요!\n원하는 폴더가 없다면 새 폴더를 추가할 수 있어요.</string>
     <string name="how_to_use_noti_setting_description">아이템의 재입고, 오픈일정 등을 알림 설정해 보세요.\n설정한 시간 30분 전에 알림 보내드려요!</string>
