--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,7 +77,7 @@
     <string name="sign_in_email_guide">가입하신 이메일을 입력해주세요!\n로그인을 위해 인증코드가 포함된 이메일을 보내드려요!</string>
     <string name="sign_in_email_verification_code_guide">인증코드가 전송되었어요!\n이메일을 확인해주세요.</string>
     <string name="sign_in_email_verification_code_detail">인증코드를 다시 확인해 주세요.</string>
-    <string name="sign_term">가입 시 이용약관과 개인정보취급방침에 동의하는 것으로 간주됩니다.</string>
+    <string name="sign_term">가입 시 <b>이용약관</b>과 <b>개인정보 처리방침</b>에 동의하는 것으로 간주합니다.</string>
     <string name="sign_auto_login_failure">자동 로그인이 만료되었습니다.</string>
 
     <!-- Home -->
