[mod] 폴더 더보기 다이얼로그 -> 공용으로 사용할 수 있는 옵션 다이얼로그로 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -230,4 +230,8 @@
     <string name="app_update_dialog_yes_button_text">업데이트</string>
     <string name="play_store_detail_url">market://details?id=</string>
 
+    <!-- Image Picker -->
+    <string name="take_picture">사진 찍기</string>
+    <string name="select_picture">사진 선택</string>
+
 </resources>
